fix mypage route.

--- a/cake/app/View/Users/mypage.haml
+++ b/cake/app/View/Users/mypage.haml
@@ -5,10 +5,10 @@
 
 
     %link{:href => "favicon.ico", :rel => "shortcut icon"}
-    %link{:href => "./css/bootstrap.min.css", :rel => "stylesheet"}
-    %link{:href => "./css/datepicker.css", :rel => "stylesheet"}
-    %link{:href => "./css/padule.css", :rel => "stylesheet"}
-    %link{:href => "./css/schedule.css", :rel => "stylesheet"}
+    %link{:href => "../../css/bootstrap.min.css", :rel => "stylesheet"}
+    %link{:href => "../../css/datepicker.css", :rel => "stylesheet"}
+    %link{:href => "../../css/padule.css", :rel => "stylesheet"}
+    %link{:href => "../../css/schedule.css", :rel => "stylesheet"}
 
     %meta{:name => "keywords", :content => "スケジュール,調整"}
     %meta{:name => "description", :content => "スケジュール,調整"}
@@ -78,49 +78,49 @@
 
     :javascript
       if (window.padule == null) window.padule = { Models: {}, Collections: {}, Views: {},Routers: {} };
-    %script{:src=>"js/libs/jquery-2.0.3.min.js"}
-    %script{:src=>"js/libs/bootstrap.min.js"}
-    %script{:src=>"js/libs/bootstrap-datepicker.js"}
-    %script{:src=>"js/libs/bootstrap-timepicker.min.js"}
-    %script{:src=>"js/libs/json2.js"}
-    %script{:src=>"js/libs/dateformat.js"}
-    %script{:src=>"js/libs/underscore.js"}
-    %script{:src=>"js/libs/backbone.js"}
-    %script{:src=>"js/libs/backbone.localStorage.js"}
-    %script{:src=>"js/application.js"}
-    %script{:src=>"js/padule.js"}
-    %script{:src=>"js/libs/jquery.mockjax.js"}
+    %script{:src=>"../../js/libs/jquery-2.0.3.min.js"}
+    %script{:src=>"../../js/libs/bootstrap.min.js"}
+    %script{:src=>"../../js/libs/bootstrap-datepicker.js"}
+    %script{:src=>"../../js/libs/bootstrap-timepicker.min.js"}
+    %script{:src=>"../../js/libs/json2.js"}
+    %script{:src=>"../../js/libs/dateformat.js"}
+    %script{:src=>"../../js/libs/underscore.js"}
+    %script{:src=>"../../js/libs/backbone.js"}
+    %script{:src=>"../../js/libs/backbone.localStorage.js"}
+    %script{:src=>"../../js/application.js"}
+    %script{:src=>"../../js/padule.js"}
+    %script{:src=>"../../js/libs/jquery.mockjax.js"}
     / template
-    %script{:src=>"js/templates/templates.js"}
+    %script{:src=>"../../js/templates/templates.js"}
     / model
-    %script{:src=>"js/models/event.js"}
-    %script{:src=>"js/models/schedule.js"}
-    %script{:src=>"js/models/seeker.js"}
-    %script{:src=>"js/models/seeker_schedule.js"}
-    %script{:src=>"js/models/user.js"}
+    %script{:src=>"../../js/models/event.js"}
+    %script{:src=>"../../js/models/schedule.js"}
+    %script{:src=>"../../js/models/seeker.js"}
+    %script{:src=>"../../js/models/seeker_schedule.js"}
+    %script{:src=>"../../js/models/user.js"}
     / collection
-    %script{:src=>"js/collections/events.js"}
-    %script{:src=>"js/collections/schedules.js"}
-    %script{:src=>"js/collections/seeker_schedules.js"}
+    %script{:src=>"../../js/collections/events.js"}
+    %script{:src=>"../../js/collections/schedules.js"}
+    %script{:src=>"../../js/collections/seeker_schedules.js"}
     / view
-    %script{:src=>"js/views/schedule/alert_modal.js"}
-    %script{:src=>"js/views/schedule/event.js"}
-    %script{:src=>"js/views/schedule/event_list.js"}
-    %script{:src=>"js/views/schedule/event_list_element.js"}
-    %script{:src=>"js/views/schedule/info_area.js"}
-    %script{:src=>"js/views/schedule/schedule.js"}
-    %script{:src=>"js/views/schedule/schedule_control.js"}
-    %script{:src=>"js/views/schedule/schedule_table.js"}
-    %script{:src=>"js/views/schedule/schedule_tbody.js"}
-    %script{:src=>"js/views/schedule/schedule_tbody_th.js"}
-    %script{:src=>"js/views/schedule/schedule_tbody_tr.js"}
-    %script{:src=>"js/views/schedule/schedule_td.js"}
-    %script{:src=>"js/views/schedule/schedule_tfoot.js"}
-    %script{:src=>"js/views/schedule/schedule_thead.js"}
-    %script{:src=>"js/views/schedule/schedule_thead_th.js"}
-    %script{:src=>"js/views/schedule/schedule_thead_tr.js"}
-    %script{:src=>"js/views/schedule/user_info.js"}
+    %script{:src=>"../../js/views/schedule/alert_modal.js"}
+    %script{:src=>"../../js/views/schedule/event.js"}
+    %script{:src=>"../../js/views/schedule/event_list.js"}
+    %script{:src=>"../../js/views/schedule/event_list_element.js"}
+    %script{:src=>"../../js/views/schedule/info_area.js"}
+    %script{:src=>"../../js/views/schedule/schedule.js"}
+    %script{:src=>"../../js/views/schedule/schedule_control.js"}
+    %script{:src=>"../../js/views/schedule/schedule_table.js"}
+    %script{:src=>"../../js/views/schedule/schedule_tbody.js"}
+    %script{:src=>"../../js/views/schedule/schedule_tbody_th.js"}
+    %script{:src=>"../../js/views/schedule/schedule_tbody_tr.js"}
+    %script{:src=>"../../js/views/schedule/schedule_td.js"}
+    %script{:src=>"../../js/views/schedule/schedule_tfoot.js"}
+    %script{:src=>"../../js/views/schedule/schedule_thead.js"}
+    %script{:src=>"../../js/views/schedule/schedule_thead_th.js"}
+    %script{:src=>"../../js/views/schedule/schedule_thead_tr.js"}
+    %script{:src=>"../../js/views/schedule/user_info.js"}
     / router
-    %script{:src=>"js/routers/schedules_router.js"}
+    %script{:src=>"../../js/routers/schedules_router.js"}
 
 
