--- a/cake/app/View/Users/mypage.haml
+++ b/cake/app/View/Users/mypage.haml
@@ -3,8 +3,7 @@
   %head
     %title Padule
 
-
-    %link{:href => "favicon.ico", :rel => "shortcut icon"}
+    %link{:href => "../../img/favicon.ico", :rel => "shortcut icon"}
     %link{:href => "../../css/bootstrap.min.css", :rel => "stylesheet"}
     %link{:href => "../../css/datepicker.css", :rel => "stylesheet"}
     %link{:href => "../../css/padule.css", :rel => "stylesheet"}
