--- a/cake/app/View/Users/mypage.haml
+++ b/cake/app/View/Users/mypage.haml
@@ -119,6 +119,8 @@
     %script{:src=>"../../js/views/schedule/schedule_tbody_tr.js"}
     %script{:src=>"../../js/views/schedule/schedule_td.js"}
     %script{:src=>"../../js/views/schedule/schedule_tfoot.js"}
+    %script{:src=>"../../js/views/schedule/schedule_tfoot_tr.js"}
+    %script{:src=>"../../js/views/schedule/schedule_tfoot_td.js"}
     %script{:src=>"../../js/views/schedule/schedule_thead.js"}
     %script{:src=>"../../js/views/schedule/schedule_thead_th.js"}
     %script{:src=>"../../js/views/schedule/schedule_thead_tr.js"}
