--- a/cake/app/View/Users/mypage.haml
+++ b/cake/app/View/Users/mypage.haml
@@ -23,7 +23,7 @@
   %body
     .navbar.navbar-inverse.navbar-fixed-top.padule-nav
       .container-fluid
-        %a.navbar-brand{:href=>"/"}
+        %a.navbar-brand{:href=>"/users/mypage"}
           Padule
         .info-area.pull-left
           %span.label
