--- a/cake/app/View/SeekerSchedules/index.haml
+++ b/cake/app/View/SeekerSchedules/index.haml
@@ -9,6 +9,17 @@
     %link{:href => "../../css/padule.css", :rel => "stylesheet"}
     %link{:href => "../../css/schedule.css", :rel => "stylesheet"}
 
+    %meta{:name => "keywords", :content => "スケジュール,調整"}
+    %meta{:name => "description", :content => "日程調整をパズル感覚で行おう"}
+    %meta{:property => "og:title", :content => "Padule"}
+    %meta{:property => "og_image", :content => ""}
+    %meta{:property => "og:description", :content => ""}
+    %meta{:property => "og:type", :content => "website"}
+    %meta{:property => "og:url", :content => "http://padule.me"}
+    %meta{:property => "og:site_name", :content => "Padule"}
+    %meta{:charset => "utf-8"}
+    %meta{:name => "viewport", :content => "width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=no"}
+
   %body
     .navbar.navbar-inverse.navbar-fixed-top.padule-nav
       .container-fluid
