fix schedule layout.

--- a/cake/app/View/Users/mypage.haml
+++ b/cake/app/View/Users/mypage.haml
@@ -47,8 +47,7 @@
         #eventSidebar
           %ul#eventList.nav
           #addEventButtonContainer
-            %button.add-event-btn.btn.btn-default
-              %i.glyphicon.glyphicon-plus
+            %button.add-event-btn.btn.btn-primary
               スケジュール追加
 
         #scheduleContents
