add seeker mail.

--- a/cake/app/webroot/scss/schedule.css.scss
+++ b/cake/app/webroot/scss/schedule.css.scss
@@ -190,6 +190,10 @@ body > #scheduleContents {
     border-bottom: 1px solid #ddd;
   }
 
+  .seeker_info {
+    color: $navy1;
+  }
+
   tbody th {
     max-width: 170px;
     width: 170px;
