--- a/cake/app/View/Users/mypage.haml
+++ b/cake/app/View/Users/mypage.haml
@@ -60,7 +60,7 @@
               %span
                 スケジュールを作成するか、作成したスケジュールを選択してください。
           .button-container
-            %button#confirmButton.btn.btn-lg.btn-success.disabled{:type => 'button'}
+            %a#confirmButton.btn.btn-lg.btn-success.disabled{:type => 'button', :onclick => "ga('send', 'event', 'schedule', 'confirm', 'confirmEvent', 1);"}
               編集した日時を確定
 
     #alertModal.modal.fade
@@ -127,4 +127,11 @@
     / router
     %script{:src=>"../../js/routers/schedules_router.js"}
 
+    %script
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-45987329-1', 'padule.me');
+      ga('send', 'pageview');
