add mail validation.

--- a/cake/app/View/SeekerSchedules/index.haml
+++ b/cake/app/View/SeekerSchedules/index.haml
@@ -40,7 +40,7 @@
         %label.important
           (必須)
         %input#inputName.necessary.input-sm.form-control{:type=>"text", :placeholder=>"氏名"}
-      .form-group
+      .form-group.input-email
         %label{:for=>"inputEmail"}
           メールアドレス
         %label.important
