fix sidebar scroll.

--- a/cake/app/View/Users/mypage.haml
+++ b/cake/app/View/Users/mypage.haml
@@ -48,7 +48,8 @@
     .schedule-container.container-fluid
       .row-fluid
         #eventSidebar
-          %ul#eventList.nav
+          .sidebar-container
+            %ul#eventList.nav
           #addEventButtonContainer
             %button.add-event-btn.btn.btn-primary
               スケジュール追加
