add new schedule color.

--- a/cake/app/webroot/scss/schedule.css.scss
+++ b/cake/app/webroot/scss/schedule.css.scss
@@ -182,6 +182,9 @@ body > #scheduleContents {
         max-width: 140px;
         text-align: left;
       }
+      .new-schedule {
+        background-color: $orange2;
+      }
     }
   }
 
