add event detail text.

--- a/cake/app/webroot/scss/schedule.css.scss
+++ b/cake/app/webroot/scss/schedule.css.scss
@@ -15,6 +15,9 @@
   .event-title {
     font-weight: bold;
   }
+  .event-text {
+    font-size: $font-size1;
+  }
   .seeker-container {
     margin-bottom: $margin2 * 2;
   }
