--- a/cake/app/View/Users/mypage.haml
+++ b/cake/app/View/Users/mypage.haml
@@ -48,11 +48,11 @@
     .schedule-container.container-fluid
       .row-fluid
         #eventSidebar
-          .sidebar-container
-            %ul#eventList.nav
-          #addEventButtonContainer
+          #addEventButtonContainer.add-container
             %button.add-event-btn.btn.btn-primary
               スケジュール追加
+          .sidebar-container
+            %ul#eventList.nav
 
         #scheduleContents
           .control-container
