--- a/cake/app/webroot/scss/schedule.css.scss
+++ b/cake/app/webroot/scss/schedule.css.scss
@@ -72,8 +72,10 @@ body > .seeker-schedule-container {
     overflow: auto;
   }
 
-  #addEventButtonContainer {
+  .add-container {
     padding: 10px;
+    @include gradient-top-lighten($gray4);
+    @include line-bottom;
     button {
       width: 100%;
     }
