--- a/cake/app/webroot/scss/landing.css.scss
+++ b/cake/app/webroot/scss/landing.css.scss
@@ -4,37 +4,77 @@ $white1: #fefefe;
 $blue1: #edf3f7;
 $blue2: #f9f9f9;
 $gray1: #4B4848;
+$gray2: #f5f5f5;
 
 $margin1: 12px;
 $margin2: 40px;
 $font-size1: 14px;
+$font-size2: 18px;
+
+$nav-height: 48px;
 
 @mixin line-top($op1: .2, $op2: .3) {
   border-top: 1px solid rgba(0, 0, 0, $op1);
   @include box-shadow(rgba(255,255,255, $op2) 0 1px 0 inset);
 }
 
+@mixin line-bottom($op1: .2, $op2: .3) {
+  border-bottom: 1px solid rgba(0, 0, 0, $op1);
+  @include box-shadow(rgba(255,255,255, $op2) 0 1px 0);
+}
+
+@mixin gradient-top-lighten($color: #666, $lighten: 10%) {
+  background-color: $color;
+  @include filter-gradient(lighten($color, $lighten), $color, vertical);
+  @include background-image(linear-gradient(lighten($color, $lighten) 0%, $color 100%));
+}
+
 body{
+  padding-top: $nav-height;
   @include background-image(linear-gradient(to top, #fff, #d6d5ff 10%, #83a9be));
 }
 
+.landing-nav {
+  @include gradient-top-lighten($gray2);
+  @include line-bottom;
+  .navbar-brand {
+    padding: 5px;
+    padding-bottom: 0px;
+  }
+  .logo {
+    margin-left: 20px;
+    max-width: 120px;
+  }
+  .social-container{
+    margin-top: 10px;
+    overflow: hidden;
+    ul {
+      margin-bottom: 0;
+    }
+    li {
+      float: left;
+      margin-right: 4px;
+      list-style-type: none;
+    }
+    iframe {
+      margin: 0 !important;
+    }
+
+  }
+  .fb-like iframe {
+    max-width: none !important;
+    max-height: none !important;
+  }
+}
+
 .landing-container{
-  padding-top: $margin1;
+  padding-top: 60px;
   @include background-image(linear-gradient($white1 0%, $blue1 86%, $blue2 100%));
 
-  .logo-container{
-    margin-left: $margin1;
-    width: 100%;
-    max-width: 250px;
-    height: 100px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-image: url('/img/logo.png');
-    @include background-size(100% auto);
-  }
-
   .lead{
-    font-size: $font-size1;
+    text-align: center;
+    font-size: $font-size2;
+    line-height: 30px;
     padding: $margin1;
   }
 
