--- a/cake/app/webroot/index.haml
+++ b/cake/app/webroot/index.haml
@@ -77,11 +77,11 @@
             .form-group
               .col-sm-offset-3.col-sm-9
                 %a.btn.btn-lg.btn-block.btn-primary{:type => 'submit'}
-                  仮登録
+                  新規登録する
             .form-group
               .col-sm-offset-3.col-sm-9
                 %a.btn.btn-lg.btn-block.btn-info{:href => '/users/login', :role => 'button'}
-                  ベータ版ログイン
+                  ベータ版ログインへ
 
         .col-md-7
           .image-container.image-main
