fix Facebook like button.

--- a/cake/app/webroot/index.haml
+++ b/cake/app/webroot/index.haml
@@ -29,7 +29,7 @@
             %li
               / Facebook
               :plain
-                <div class="fb-like" data-href="http://padule.me/" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
+                <div class="fb-like" data-href="https://www.facebook.com/padule.me" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
             %li
               / Twitter
               :plain
@@ -143,7 +143,7 @@
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1&appId=118785338301077";
+        js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1";
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     :javascript
