--- a/cake/app/webroot/scss/landing.css.scss
+++ b/cake/app/webroot/scss/landing.css.scss
@@ -148,6 +148,11 @@ body{
     }
   }
 
+  .fb-like-box {
+    background-color: $white1;
+    margin-bottom: 20px;
+  }
+
   .image-mobile-container{
     .description{
       padding-top: 50px;
