fix submit button.

--- a/cake/app/webroot/index.haml
+++ b/cake/app/webroot/index.haml
@@ -76,8 +76,7 @@
                     に同意する
             .form-group
               .col-sm-offset-3.col-sm-9
-                %a.btn.btn-lg.btn-block.btn-primary{:type => 'submit'}
-                  新規登録する
+                %input.btn.btn-lg.btn-block.btn-primary{:type => 'submit', :value => '新規登録する'}
             .form-group
               .col-sm-offset-3.col-sm-9
                 %a.btn.btn-lg.btn-block.btn-info{:href => '/users/login', :role => 'button'}
