modified complete page.

--- a/cake/app/webroot/index.haml
+++ b/cake/app/webroot/index.haml
@@ -5,6 +5,7 @@
 
     %link{:href => 'img/favicon.ico', :rel => 'shortcut icon'}
     %link{:href => 'css/bootstrap.min.css', :rel => 'stylesheet'}
+    %link{:href => 'css/public.css', :rel => 'stylesheet'}
     %link{:href => 'css/landing.css', :rel => 'stylesheet'}
 
     %meta{:name => 'keywords', :content => '調整,スケジュール,面接,日程,リクルート'}
