fix terms page.

--- a/cake/app/webroot/terms.haml
+++ b/cake/app/webroot/terms.haml
@@ -160,3 +160,9 @@
             本規約および本サービスに関する準拠法は日本法とし、本規約および本サービスから生ずる紛争については、訴額により東京地方裁判所または東京簡易裁判所を第一審の専属的合意管轄裁判所とします。
 
         %p.last='以上'
+
+    .container.footer-container
+      .pull-right
+        © 2013 Padule Inc. - Started by
+        %a{:href => "http://tokyo.startupweekend.org/"}
+          Startup Weekend Tokyo
