fix complete page.

--- a/cake/app/webroot/index.haml
+++ b/cake/app/webroot/index.haml
@@ -72,7 +72,7 @@
                 .checkbox
                   %label
                     %input#termsCheck.forms{:type => 'checkbox'}
-                    %a{:href => '/terms.html'}
+                    %a{:target => '_blank', :href => '/terms.html'}
                       利用規約
                     に同意する
             .alert-container#alertArea.hide
@@ -146,7 +146,7 @@
         %a{:href => 'mailto:padule@outlook.com'}
           お問い合わせ
       .pull-right
-        %a{:href => '/privacy.html'}
+        %a{:target => '_blank', :href => '/privacy.html'}
           プライバシーポリシー
 
     :javascript
