--- a/cake/app/View/Feedbacks/index.haml
+++ b/cake/app/View/Feedbacks/index.haml
@@ -21,7 +21,10 @@
           %li.dropdown
             %a{:href=>"#", :data=>{:toggle=>'dropdown'}, :class=> 'pull-right'}
               %i.glyphicon.glyphicon-user
-              %span#userName
+              :plain
+                <span id='userName' data-userid='<?php echo $user["id"]; ?>'>
+                  <?php echo $user['username'];?>
+                </span>
               %b.caret
 
             %ul.dropdown-menu
@@ -30,14 +33,69 @@
                   %i.glyphicon.glyphicon-off
                   ログアウト
 
-    .container-fluid
+    .info-container.container-fluid
+      .row
+        .col-md-4.count-container
+          :plain
+            <span class='feedback-number'>
+              <?php echo count($feedbacks);?>
+            </span>
+          %span='件のフィードバック'
+        .col-md-8
+          %p='Paduleをご利用いただきありがとうございます！'
+          %p='Paduleは鋭意改善中ですので、フィードバックをいただけばすぐに対応します！'
+          %p='どんな小さなことでも大歓迎です！'
+
+    .feedback-container.container-fluid
       .row-fluid
+        %table.table.table-hover.table-condensed.table-bordered#feedbackTable
+          %thead
+            %tr
+              %th='報告区分'
+              %th='内容'
+              %th
+              %th='報告者'
+              %th='対応区分'
+              %th='運営コメント'
+              %th='登録日'
+            %tr.new-feedback
+              %td.center.feedback_kb
+                %select.form-control#feedbackKb
+                  %option{:value=>'1'}='要望'
+                  %option{:value=>'2'}='質問'
+                  %option{:value=>'3'}='バグ'
+              %td
+                %textarea#feedbackContent.form-control{:rows=>'3', :placeholder=>'要望や質問を記入し、送信ボタンを押してください'}
+              %td.center.btn-container
+                %button.btn.btn-primary#btnSendFeedback.disabled{:type=>'button'}
+                  送信
+              %td.center
+              %td.center
+              %td
+              %td.center
+          %tbody
+
+    #alertModal.modal.fade
+      .modal-dialog
+        .modal-content
+          .modal-header
+            %button.close{:type=>'button', :aria=>{:hidden=>'modal-body'}, :data=>{:dismiss => 'modal'}}
+              &times;
+            %i.glyphicon.glyphicon-question-sign
+            %span.modal-title
+          .modal-body
+          .modal-footer
+            %button#alertOK.btn.btn-success{:type => 'button'}
+              はい
+            %button.btn.btn-default{:type => 'button', :data => {:dismiss => 'modal'}}
+              いいえ
 
     :javascript
       if (window.padule == null) window.padule = { Models: {}, Collections: {}, Views: {},Routers: {} };
     %script{:src=>"../../js/libs/jquery-2.0.3.min.js"}
     %script{:src=>"../../js/libs/bootstrap.min.js"}
     %script{:src=>"../../js/libs/json2.js"}
+    %script{:src=>"../../js/libs/dateformat.js"}
     %script{:src=>"../../js/libs/underscore.js"}
     %script{:src=>"../../js/libs/backbone.js"}
     %script{:src=>"../../js/application.js"}
@@ -49,6 +107,8 @@
     / collection
     %script{:src=>"../../js/collections/feedbacks.js"}
     / view
+    %script{:src=>"../../js/views/schedule/alert_modal.js"}
+    %script{:src=>"../../js/views/feedback/feedback_list_element.js"}
     %script{:src=>"../../js/views/feedback/feedback_index.js"}
     / router
     %script{:src=>"../../js/routers/schedules_router.js"}
