--- a/cake/app/View/Users/mypage.haml
+++ b/cake/app/View/Users/mypage.haml
@@ -45,6 +45,11 @@
         :plain
           </ul>
 
+        .feedback-container.pull-right
+          %a.btn.btn-default.btn-sm{:href=>'/feedbacks'}
+            %i.glyphicon.glyphicon-edit
+            フィードバックはこちらから！
+
     .schedule-container.container-fluid
       .row-fluid
         #eventSidebar
