--- a/cake/app/webroot/scss/schedule.css.scss
+++ b/cake/app/webroot/scss/schedule.css.scss
@@ -49,6 +49,10 @@ body > .seeker-schedule-container {
   min-height: auto;
 }
 
+.feedback-container{
+  margin-top: 5px;
+}
+
 .schedule-container{
   padding-left: $margin1;
   padding-right: $margin1;
