--- a/cake/app/View/Users/admin.haml
+++ b/cake/app/View/Users/admin.haml
@@ -29,12 +29,23 @@
         font-size: 60px;
         font-weight: bold;
       }
+      .button-container{
+        margin-top: 5px;
+        margin-right: 6px;
+      }
 
   %body
     .navbar.navbar-inverse.navbar-fixed-top.padule-nav
       .container-fluid
         %a.navbar-brand{:href => '../users/admin'}
           Padule管理ページ
+
+      .button-container.pull-right
+        %a.btn.btn-default.btn-sm{:href=>'/users/logout'}
+          ログアウト
+      .button-container.pull-right
+        %a.btn.btn-info.btn-sm{:href=>'/feedbacks'}
+          フィードバックページ
 
     .count-container
       %span='登録者数 '
