--- a/cake/app/View/Feedbacks/index.haml
+++ b/cake/app/View/Feedbacks/index.haml
@@ -51,19 +51,31 @@
         %table.table.table-hover.table-condensed.table-bordered#feedbackTable
           %thead
             %tr
-              %th='報告区分'
-              %th='内容'
               %th
-              %th='報告者'
+              :plain
+                <?php if ($user["company_id"] == 9999): ?>
+                  <th>報告者</th>
+                <?php endif; ?>
+              %th='コメント'
+              %th
               %th='登録日'
-              %th='対応区分'
+              %th='対応状況'
               %th='運営コメント'
+              :plain
+                <?php if ($user["company_id"] == 9999): ?>
+                  <th></th>
+                <?php endif; ?>
             %tr.new-feedback
               %td.center.feedback_kb
                 %select.form-control#feedbackKb
-                  %option{:value=>'1'}='要望'
-                  %option{:value=>'2'}='質問'
-                  %option{:value=>'3'}='バグ'
+                  %option{:value=>'1'}='アイデア'
+                  %option{:value=>'2'}='いいね！'
+                  %option{:value=>'3'}='質問'
+                  %option{:value=>'4'}='バグ'
+              :plain
+                <?php if ($user["company_id"] == 9999): ?>
+                  <td></td>
+                <?php endif; ?>
               %td
                 %textarea#feedbackContent.form-control{:rows=>'3', :placeholder=>'要望や質問を記入し、送信ボタンを押してください'}
               %td.center.btn-container
@@ -71,8 +83,11 @@
                   送信
               %td.center
               %td.center
-              %td.center
               %td
+              :plain
+                <?php if ($user["company_id"] == 9999): ?>
+                  <td></td>
+                <?php endif; ?>
           %tbody
 
     #alertModal.modal.fade
